<resources>
    <string name="app_name">Viva Rituals</string>
    <string name="title">This is just a template</string>
    <string name="description">You can compute a factorial using the library-kotlin module. The result will be also shown in a notification using the library-android module.</string>
    <string name="factorial_hint">Insert a number to compute his factorial</string>
    <string name="compute">Compute</string>
    <string name="notification_title">The Result is: %s</string>
    <string name="please_enter_a_number">Please Enter a Number</string>
    <string name="compose_version">In Compose</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign-up</string>
    <string name="app_logo">Viva Rituals Logo</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="habits">Habits</string>
    <string name="back_to_main">Back to Main</string>
    <string name="ok">Go To Main</string>
    <string name="todo">To do</string>
    <string name="item">Item Name</string>
    <string name="lifestyle_item">Life Style Item</string>
    <string name="go_to_habits">Go To Habits</string>
</resources>
